syntax = "proto3";

option java_package = "com.example.spycamsecurity";
option java_multiple_files = true;

message AppSettings {
  ProtoUserType userType = 1;

  enum ProtoUserType {
    SERVER = 0;
    CLIENT = 1;
  }
}